<resources>
    <string name="app_name">ViajecitosAPP</string>
    <string name="et_nombre">Nombre viajero</string>

    <string name="tv1">Pon tu nombre en el pasaporte y empieza el viaje</string>
    <string name="tv_nuestro">Ivan Jacome y Cristina Sanchez</string>
    <string name="tv_record"></string>
    <string name="iv_vidas"></string>
    <string name="tv_score">visados = 0</string>
    <string name="rb_opcion1">opcion</string>
    <string name="rb_opcion2">opcion</string>
    <string name="rb_opcion3">opcion</string>
    <string name="tv_nombre"></string>
    <string name="iv_banderas">banderas</string>
    <string name="bt_comprobar">comprobar</string>
    <string name="tv_invisible"></string>
    <string name="bt_jugar">viajar</string>

</resources>