<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activityeuropa"
    tools:context=".Nivel1">

    <TextView
        android:id="@+id/tv_nivel1"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="Nivel1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nivel1" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="84dp"
        android:text="@string/tv_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="72dp"
        android:text="¿Que bandera es?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <ImageView
        android:id="@+id/iv_banderas"
        android:layout_width="139dp"
        android:layout_height="164dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <RadioGroup
        android:id="@+id/respuestas"
        android:layout_width="110dp"
        android:layout_height="148dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregunta">

        <RadioButton
            android:id="@+id/rb_opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_opcion1" />

        <RadioButton
            android:id="@+id/rb_opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_opcion2" />

        <RadioButton
            android:id="@+id/rb_opcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_opcion3" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iv_vidas"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/tv_nuestro1"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_nuestro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_oculto"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/tv_oculto"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestas" />

    <Button
        android:id="@+id/bt_comprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="20dp"
        android:onClick="comprobar"
        android:text="@string/bt_comprobar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_banderas" />

    <TextView
        android:id="@+id/tv_invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_invisible"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombrevisado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="204dp"
        android:text="Visados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>